// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetStocks should create an instance 1`] = `
GetStocks {
  "type": "[Stocks] Get",
}
`;

exports[`GetStocksFail should create an instance 1`] = `
GetStocksFail {
  "payload": [Error: error],
  "type": "[Stocks] Get Fail",
}
`;

exports[`GetStocksSuccess should create an instance 1`] = `
GetStocksSuccess {
  "payload": Array [
    Object {
      "currency": "USD",
      "currentPrice": 2228.55,
      "dayHighPrice": 2269.94,
      "dayLowPrice": 2217.22,
      "fiftyTwoWeekHigh": 3042,
      "fiftyTwoWeekLow": 2044.16,
      "name": "Alphabet",
      "regularMarketVolume": 1567487,
      "symbol": "GOOG",
    },
    Object {
      "currency": "USD",
      "currentPrice": 252.99,
      "dayHighPrice": 260.54,
      "dayLowPrice": 252.86,
      "fiftyTwoWeekHigh": 349.67,
      "fiftyTwoWeekLow": 246.44,
      "name": "Microsoft",
      "regularMarketVolume": 31445841,
      "symbol": "MSFT",
    },
  ],
  "type": "[Stocks] Get Success",
}
`;

exports[`SetStocks should create an instance 1`] = `
SetStocks {
  "payload": Object {
    "currency": "USD",
    "currentPrice": 2228.55,
    "dayHighPrice": 2269.94,
    "dayLowPrice": 2217.22,
    "fiftyTwoWeekHigh": 3042,
    "fiftyTwoWeekLow": 2044.16,
    "name": "Alphabet",
    "regularMarketVolume": 1567487,
    "symbol": "GOOG",
  },
  "type": "[Stocks] Set",
}
`;
